--- a/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/CoordinatesFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/latitudeTextView"
-        style="@style/Coordinates"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/centerGuideline"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="bottom|center"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.50" />
+
+    <com.elyeproj.loaderviewlibrary.LoaderTextView
+        android:id="@+id/latitudeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:gravity="center"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
+        app:corners="4"
+        app:custom_color="@color/loaderViewShimmer"
+        app:height_weight="0.8"
+        app:layout_constraintBottom_toTopOf="@id/centerGuideline"
         tools:text="-100° 60' 60&quot;" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.elyeproj.loaderviewlibrary.LoaderTextView
         android:id="@+id/longitudeTextView"
-        style="@style/Coordinates"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="top|center"
+        android:layout_height="72dp"
+        android:gravity="center"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
+        app:corners="4"
+        app:custom_color="@color/loaderViewShimmer"
+        app:height_weight="0.8"
+        app:layout_constraintTop_toBottomOf="@id/centerGuideline"
         tools:text="-100° 60' 60&quot;" />
 
     <TextView
@@ -34,7 +44,9 @@
         style="@style/CoordinatesFormatLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/coordinate_format_label_degrees_minutes_seconds" />
+        android:text="@string/coordinate_format_label_degrees_minutes_seconds"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
