--- a/app/src/main/res/layout-land/compass_fragment.xml
+++ b/app/src/main/res/layout-land/compass_fragment.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:paddingStart="32dp"
+        android:paddingTop="32dp"
+        android:paddingEnd="32dp"
+        android:paddingBottom="32dp">
 
         <FrameLayout
+            android:id="@+id/compassFrameLayout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toStartOf="@id/degreesTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent=".50">
 
             <io.trewartha.positional.ui.compass.CompassView
-                android:id="@+id/compass_background_view"
+                android:id="@+id/backgroundCompassView"
                 style="@style/CompassBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -31,7 +32,7 @@
                 tools:ignore="ContentDescription" />
 
             <io.trewartha.positional.ui.compass.CompassView
-                android:id="@+id/compass_needle_view"
+                android:id="@+id/needleCompassView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitCenter"
@@ -39,7 +40,7 @@
                 tools:ignore="ContentDescription" />
 
             <ImageView
-                android:id="@+id/compass_pin_image_view"
+                android:id="@+id/pinImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitCenter"
@@ -48,97 +49,159 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/degreesTextView"
+            style="@style/CompassDegrees"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:orientation="vertical">
+            app:autoSizeTextType="uniform"
+            app:layout_constraintBottom_toTopOf="@id/detailsLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent=".50"
+            app:layout_constraintStart_toEndOf="@id/compassFrameLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent=".50" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/detailsLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/compassFrameLayout"
+            app:layout_constraintTop_toBottomOf="@id/degreesTextView">
 
             <TextView
-                android:id="@+id/compass_degrees_text_view"
-                style="@style/CompassDegrees"
+                android:id="@+id/accuracyTitleTextView"
+                style="@style/CompassAttributeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:textSize="72sp"
-                tools:text="360°" />
+                android:text="@string/compass_accuracy_title"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toTopOf="@id/accelerometerAccuracyLabelTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/accelerometerAccuracyLabelTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="4dp"
+                android:labelFor="@id/accelerometerAccuracyTextView"
+                android:text="@string/compass_accuracy_accelerometer_label"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toTopOf="@id/magnetometerAccuracyLabelTextView"
+                app:layout_constraintEnd_toStartOf="@id/accelerometerAccuracyTextView"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="@id/accuracyTitleTextView"
+                app:layout_constraintTop_toBottomOf="@id/accuracyTitleTextView" />
+
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/accelerometerAccuracyTextView"
+                style="@style/CompassAttributeValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/compass_details_accuracy_min_width"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toBottomOf="@id/accelerometerAccuracyLabelTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/accelerometerAccuracyLabelTextView"
+                app:layout_constraintTop_toTopOf="@id/accelerometerAccuracyLabelTextView"
+                tools:text="@string/compass_accuracy_unknown" />
+
+            <TextView
+                android:id="@+id/magnetometerAccuracyLabelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="16dp"
-                android:orientation="vertical">
+                android:gravity="end"
+                android:labelFor="@id/magnetometerAccuracyTextView"
+                android:text="@string/compass_accuracy_magnetometer_label"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toTopOf="@id/modeTitleTextView"
+                app:layout_constraintEnd_toStartOf="@id/magnetometerAccuracyTextView"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="@id/accelerometerAccuracyLabelTextView"
+                app:layout_constraintTop_toBottomOf="@id/accelerometerAccuracyLabelTextView" />
 
-                <TextView
-                    android:id="@+id/compass_accuracy_title_text_view"
-                    style="@style/CompassAttributeTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/compass_accuracy_title"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/compass_accuracy_accelerometer_text_view"
-                    style="@style/CompassAttributeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/compass_accuracy_accelerometer"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/compass_accuracy_magnetometer_text_view"
-                    style="@style/CompassAttributeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/compass_accuracy_magnetometer"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/magnetometerAccuracyTextView"
+                style="@style/CompassAttributeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="vertical">
+                android:minWidth="@dimen/compass_details_accuracy_min_width"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toBottomOf="@id/magnetometerAccuracyLabelTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/magnetometerAccuracyLabelTextView"
+                app:layout_constraintTop_toTopOf="@id/magnetometerAccuracyLabelTextView"
+                tools:text="@string/compass_accuracy_unknown" />
 
-                <TextView
-                    android:id="@+id/compass_mode_title_text_view"
-                    style="@style/CompassAttributeTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/compass_mode_title"
-                    android:textSize="14sp" />
+            <TextView
+                android:id="@+id/modeTitleTextView"
+                style="@style/CompassAttributeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:labelFor="@id/modeTextView"
+                android:text="@string/compass_mode_title"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toTopOf="@id/modeTextView"
+                app:layout_constraintStart_toStartOf="@id/magnetometerAccuracyLabelTextView"
+                app:layout_constraintTop_toBottomOf="@id/magnetometerAccuracyLabelTextView" />
 
-                <TextView
-                    android:id="@+id/compass_mode_text_view"
-                    style="@style/CompassAttributeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:textSize="14sp"
-                    tools:text="@string/compass_mode_magnetic_north" />
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/modeTextView"
+                style="@style/CompassAttributeValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/compass_details_mode_min_width"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toTopOf="@id/declinationLabelTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@id/modeTitleTextView"
+                app:layout_constraintTop_toBottomOf="@id/modeTitleTextView"
+                tools:text="@string/compass_mode_true_north" />
 
-                <TextView
-                    android:id="@+id/compass_declination_text_view"
-                    style="@style/CompassAttributeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/compass_declination"
-                    android:textSize="14sp" />
+            <TextView
+                android:id="@+id/declinationLabelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:labelFor="@id/declinationTextView"
+                android:text="@string/compass_declination_label"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/declinationTextView"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="@id/modeTextView"
+                app:layout_constraintTop_toBottomOf="@id/modeTextView" />
 
-            </LinearLayout>
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/declinationTextView"
+                style="@style/CompassAttributeValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/compass_details_accuracy_min_width"
+                android:textSize="@dimen/compass_details_text_size"
+                app:layout_constraintBottom_toBottomOf="@id/declinationLabelTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/declinationLabelTextView"
+                app:layout_constraintTop_toTopOf="@id/declinationLabelTextView"
+                tools:text="@string/compass_accuracy_unknown" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
