--- a/app/src/main/res/layout-large/position_fragment.xml
+++ b/app/src/main/res/layout-large/position_fragment.xml
@@ -126,7 +126,8 @@
                     android:layout_marginEnd="6dp"
                     android:minWidth="192dp"
                     app:corners="4"
-                    app:custom_color="@color/loaderViewShimmer" />
+                    app:custom_color="@color/loaderViewShimmer"
+                    app:height_weight="0.8" />
 
             </LinearLayout>
 
@@ -167,7 +168,8 @@
                     android:layout_marginEnd="6dp"
                     android:minWidth="192dp"
                     app:corners="4"
-                    app:custom_color="@color/loaderViewShimmer" />
+                    app:custom_color="@color/loaderViewShimmer"
+                    app:height_weight="0.8" />
 
             </LinearLayout>
 
@@ -208,7 +210,8 @@
                     android:layout_marginEnd="6dp"
                     android:minWidth="192dp"
                     app:corners="4"
-                    app:custom_color="@color/loaderViewShimmer" />
+                    app:custom_color="@color/loaderViewShimmer"
+                    app:height_weight="0.8" />
 
             </LinearLayout>
 
@@ -249,7 +252,8 @@
                     android:layout_marginEnd="6dp"
                     android:minWidth="192dp"
                     app:corners="4"
-                    app:custom_color="@color/loaderViewShimmer" />
+                    app:custom_color="@color/loaderViewShimmer"
+                    app:height_weight="0.8" />
 
             </LinearLayout>
 
